--- a/mov_rec/app/views/movies/show.html.erb
+++ b/mov_rec/app/views/movies/show.html.erb
@@ -1,20 +1,20 @@
 <p id="notice"><%= notice %></p>
 
-<% unless @movie.poster.blank? %>
-  <img src="<%= @movie.poster %>" style="width: 350px; float: right">
-<% end %>
-
 <h2><%= @movie.movie_name %></h2>
 
 <% if current_user.user_type_id == UserType.find_by(type_name: 'Admin').id  %>
-  <%= link_to 'Edit', edit_movie_path(@movie) %> | 
+  <%= link_to 'Edit', edit_movie_path(@movie) %> |
 <% end %>
 
 <%= link_to 'Back', movies_path %>
 
+<% unless @movie.poster.blank? %>
+  <img src="<%= @movie.poster %>" style="width: 350px; float: right">
+<% end %>
+
 <p>
-  <strong>Description:</strong>
-  <%= @movie.description %>
+  <div><strong>Description:</strong></div>
+  <div style="width: 300px; text-align: justify"><%= @movie.description %></div>
 </p>
 
 <p>
