--- a/mov_rec/app/views/topics/index.html.erb
+++ b/mov_rec/app/views/topics/index.html.erb
@@ -8,6 +8,7 @@
   <thead>
     <tr>
       <th>Genre</th>
+      <th>Top Movie</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -16,6 +17,7 @@
     <% @topics.each do |topic| %>
       <tr>
         <td><%= topic.genre_name %></td>
+        <td></td>
         <td><%= link_to 'Show', topic %></td>
 
         <% if current_user.user_type_id == @admin.id  %>
