--- a/mov_rec/app/views/topics/show.html.erb
+++ b/mov_rec/app/views/topics/show.html.erb
@@ -78,7 +78,7 @@
 	<% @movies.each do |movie| %>
 	  <tr>
 		<td><img src="<%= movie.poster %>" style="width: 75px"></td>
-		<td><%= movie.movie_name %></td>
+		<td><a href="/movies/<%= movie.id %>"><%= movie.movie_name %></a></td>
 		<td id="td1"><%= movie.description %></td>
 		<td><%= movie.date_released %></td>
 		<td>
