--- a/mov_rec/app/views/layouts/application.html.erb
+++ b/mov_rec/app/views/layouts/application.html.erb
@@ -25,10 +25,8 @@
 		  	<li><a href="/studios">STUDIOS</a></li>
 
 			<% if admin? %>
-					<li class="dropdown">
-	            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-	              Admin Tools<b class="caret"></b>
-	            </a>
+				<li class="dropdown">
+	            	<a href="#" class="dropdown-toggle" data-toggle="dropdown">Admin Tools<b class="caret"></b></a>
 			  	<ul class="dropdown-menu">
 			  		<li><a href="/users">USERS</a></li>
 	      			<li><a href="/movies">MOVIES</a></li>
@@ -39,7 +37,7 @@
 					<li><a href="/movie_ratings">WATCHED</a></li>
 					<li class="divider"></li>
 				</ul>
-				<li><%= link_to "LOG OUT", logout_path, method: "delete" %></li>
+			</li>
 			<% else %>
 			<li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
