changed search to get request, and fixed error page
search bar now does not throw any errors! but still doesn’t return query

--- a/mov_rec/app/views/layouts/application.html.erb
+++ b/mov_rec/app/views/layouts/application.html.erb
@@ -56,7 +56,7 @@
     				<div class="input-group">
       					<%= text_field_tag :query, params[:query], size: 150, placeholder: "Search for...", class: "form-control"%>
       					<span class="input-group-btn">
-      						<%= submit_tag 'Go!', class: 'btn btn-default' %>
+      						<%= submit_tag 'Go!', class: 'btn btn-default', :name => nil %>
       					</span>
     				</div>
     			</div>
