--- a/mov_rec/app/views/directors/index.html.erb
+++ b/mov_rec/app/views/directors/index.html.erb
@@ -8,8 +8,7 @@
   <thead>
     <tr>
       <th></th>
-      <th>First name</th>
-      <th>Last name</th>
+      <th>Name</th>
       <th>Place of birth</th>
       <th colspan="3"></th>
     </tr>
@@ -23,8 +22,7 @@
         <% else %>
           <td><img src="<%= director.picture %>" style="width: 75px"></td>
         <% end %>
-        <td><%= director.first_name %></td>
-        <td><%= director.last_name %></td>
+        <td><a href="/directors/<%= director.id %>"><%= director.first_name %> <%= director.last_name %></a></td>
         <td><%= director.place_of_birth %></td>
         <td><%= director.date_of_birth %></td>
         <td><%= director.gender %></td>
