--- a/mov_rec/app/views/movies/show.html.erb
+++ b/mov_rec/app/views/movies/show.html.erb
@@ -73,8 +73,7 @@
   <% @directors = Director.joins(:directs).where(directs: { movie_id: @movie.id }) %>
 
   <% @directors.each do |director| %>
-    <a href="/directors/<%= director.id %>"><%= director.first_name %>
-    <%= director.last_name %></a><br>
+    <a href="/directors/<%= director.id %>"><%= director.first_name %> <%= director.last_name %></a><br>
   <% end %>
 
 </p>
@@ -95,7 +94,7 @@
 
 <h2>Roles</h2>
 
-<% @roles = Role.joins(:movie_roles).where(movie_roles: { movie_id: @movie.id }).order('character_name ASC') %>
+<% @actors = Actor.joins(:movie_casts).where(movie_casts: { movie_id: @movie.id }).order('casting_type_id ASC') %>
 
 <table>
   <thead>
@@ -109,22 +108,18 @@
   </thead>
 
   <tbody>
-    <% @roles.each do |role| %>
-      <% @actors = Actor.joins(:actor_roles).where(actor_roles: { role_id: role.id }) %>
+    <% @actors.each do |actor| %>
+      <% @roles = Role.joins(:actor_roles, :movie_roles).where(actor_roles: { actor_id: actor.id }, movie_roles: { movie_id: @movie.id}) %>
+      <% @type = CastingType.joins(:movie_casts).where(movie_casts: { movie_id: @movie.id, actor_id: actor.id }).take %>
       <tr>
-        <% @actors.each do |actor| %>
-          <% @type = CastingType.joins(:movie_casts).where(movie_casts: { movie_id: @movie.id, actor_id: actor.id }).take %>
           <td><img src="<%= actor.picture %>" style="width: 75px"></td>
+          <td><a href="/actors/<%= actor.id %>"><%= actor.first_name %> <%= actor.last_name %></a><br></td>
           <td>
-            <% if actor == @actors.last %>
-              <a href="/actors/<%= actor.id %>"><%= actor.first_name %> <%= actor.last_name %></a>
-            <% else %>
-              <a href="/actors/<%= actor.id %>"><%= actor.first_name %> <%= actor.last_name %></a>,
+            <% @roles.each do |role| %>
+              <%= role.character_name %><br>
             <% end %>
           </td>
-          <td><%= role.character_name %></td>
           <td><%= @type.cast_type %></td>
-        <% end %>
       </tr>
     <% end %>
   </tbody>
