--- a/mov_rec/app/views/directors/show.html.erb
+++ b/mov_rec/app/views/directors/show.html.erb
@@ -35,47 +35,45 @@
 
 <%= link_to 'Back', directors_path %>
 
-<% @movies = Movie.joins(:directs).where(directs: { director_id: @director.id }) %>
+<% @movies = Movie.joins(:directs).where(directs: { director_id: @director.id }).order('movie_name ASC') %>
 
 <table>
   <thead>
-  <tr>
-    <th></th>
-    <th>Movie Name</th>
-    <th>Description</th>
-    <th>Date released</th>
-    <th>Duration</th>
-    <th>Language</th>
-    <th>Subtitles</th>
-    <th>Dubbed</th>
-    <th>Country</th>
-    <th>Age rating</th>
-    <th colspan="3"></th>
-  </tr>
+    <tr>
+      <th></th>
+      <th>Movie Name</th>
+      <th>Description</th>
+      <th>Date released</th>
+      <th>Duration</th>
+      <th>Language</th>
+      <th>Subtitles</th>
+      <th>Dubbed</th>
+      <th>Country</th>
+      <th>Age rating</th>
+      <th colspan="3"></th>
+    </tr>
   </thead>
 
   <tbody>
-  <% @movies.each do |movie| %>
-    <tr>
-    <td><img src="<%= movie.poster %>" style="width: 75px"></td>
-    <td><a href="/movies/<%= movie.id %>"><%= movie.movie_name %></a></td>
-    <td><%= movie.description %></td>
-    <td><%= movie.date_released %></td>
-    <td>
-      <% if movie.duration.hour == 0 %>
-      <%= movie.duration.strftime('%Mm') %>
-      <% else %>
-      <%= movie.duration.strftime('%kh %Mm') %>
-      <% end %>
-    </td>
-    <td><%= movie.language %></td>
-    <td><%= movie.subtitles %></td>
-    <td><%= movie.dubbed %></td>
-    <td><%= movie.country %></td>
-    <td><%= movie.age_rating %></td>
-
-    <td><%= link_to 'Show', movie %></td>
-    </tr>
-  <% end %>
+    <% @movies.each do |movie| %>
+      <tr>
+        <td><img src="<%= movie.poster %>" style="width: 75px"></td>
+        <td><a href="/movies/<%= movie.id %>"><%= movie.movie_name %></a></td>
+        <td><%= movie.description %></td>
+        <td><%= movie.date_released %></td>
+        <td>
+          <% if movie.duration.hour == 0 %>
+          <%= movie.duration.strftime('%Mm') %>
+          <% else %>
+          <%= movie.duration.strftime('%kh %Mm') %>
+          <% end %>
+        </td>
+        <td><%= movie.language %></td>
+        <td><%= movie.subtitles %></td>
+        <td><%= movie.dubbed %></td>
+        <td><%= movie.country %></td>
+        <td><%= movie.age_rating %></td>
+      </tr>
+    <% end %>
   </tbody>
 </table>
