--- a/mov_rec/app/views/movies/index.html.erb
+++ b/mov_rec/app/views/movies/index.html.erb
@@ -4,60 +4,26 @@
 
 <h1>Listing Movies</h1>
 
-<table>
-  <thead>
-    <tr>
-      <th></th>
-      <th>Movie Name</th>
-      <th>Description</th>
-      <th>Date released</th>
-      <th>Duration</th>
-      <th>Language</th>
-      <th>Subtitles</th>
-      <th>Dubbed</th>
-      <th>Country</th>
-      <th>Age rating</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
     <% @movies.each do |movie| %>
-      <tr>
+
+<div style="float: left;">
+
+    <% if current_user.user_type_id == @admin.id  %>
+      <%= link_to 'Edit', edit_movie_path(movie) %>
+      <%= link_to 'Destroy', movie, method: :delete, data: { confirm: 'Are you sure?' } %>
+    <% end %>
+    <br>
+
         <% if movie.poster.blank? %>
-          <td><img src="<%= movie.poster %>" style="width: 75px; visibility: hidden"></td>
+          <img src="<%= movie.poster %>" style="width: 200px; visibility: hidden">
         <% else %>
-          <td><img src="<%= movie.poster %>" style="width: 75px"></td>
+          <img src="<%= movie.poster %>" style="width: 200px">
         <% end %>
-        <td style="width: 200px"><a href="/movies/<%= movie.id %>"><%= movie.movie_name %></a></td>
-        <td id="td1"><%= movie.description %></td>
-        <td><%= movie.date_released %></td>
-        <td>
-          <% if movie.duration.hour == 0 %>
-            <%= movie.duration.strftime('%Mm') %>
-          <% else %>
-            <%= movie.duration.strftime('%kh %Mm') %>
-          <% end %>
-        </td>
-        <td><%= movie.language %></td>
-        <td><%= movie.subtitles %></td>
-        <td><%= movie.dubbed %></td>
-        <td><%= movie.country %></td>
-        <td><%= movie.age_rating %></td>
-
-        <td><%= link_to 'Show', movie %></td>
-
-        <% if current_user.user_type_id == @admin.id  %>
-          <td><%= link_to 'Edit', edit_movie_path(movie) %></td>
-          <td><%= link_to 'Destroy', movie, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-        <% end %>
-      </tr>
+        <br>
+        <td style="width: 200px"><a href="/movies/<%= movie.id %>"><%= movie.movie_name %></a>
 
     <% end %>
-  </tbody>
-</table>
-
-<br>
+</div>
 
 <% if current_user.user_type_id == @admin.id  %>
   <%= link_to 'New Movie', new_movie_path %>
