--- a/mov_rec/app/assets/stylesheets/movies.scss
+++ b/mov_rec/app/assets/stylesheets/movies.scss
@@ -1,3 +1,13 @@
 // Place all the styles related to the Movies controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.center {
+    margin: auto;
+    width: 250px;
+    height: 375px;
+    border: 3px solid #73AD21;
+    padding: 10px;
+    float: left;
+    text-align: center;
+}
