--- a/mov_rec/app/views/movies/index.html.erb
+++ b/mov_rec/app/views/movies/index.html.erb
@@ -6,8 +6,7 @@
 
     <% @movies.each do |movie| %>
 
-<<<<<<< HEAD
-<div style="float: left;">
+<div class="center">
 
     <% if current_user.user_type_id == @admin.id  %>
       <%= link_to 'Edit', edit_movie_path(movie) %>
@@ -19,11 +18,6 @@
           <img src="<%= movie.poster %>" style="width: 200px; visibility: hidden">
         <% else %>
           <img src="<%= movie.poster %>" style="width: 200px">
-=======
-        <% if current_user.user_type_id == @admin.id  %>
-          <td><%= link_to 'Edit', edit_movie_path(movie) %></td>
-          <td><%= link_to 'Destroy', movie, method: :delete, data: { confirm: 'Are you sure?' } %></td>
->>>>>>> a1fc582cd0726b94c5f853d3890aff4c04ca0060
         <% end %>
         <br>
         <td style="width: 200px"><a href="/movies/<%= movie.id %>"><%= movie.movie_name %></a>
