Fixed watched and showing featured actor!!

--- a/mov_rec/app/views/movie_ratings/index.html.erb
+++ b/mov_rec/app/views/movie_ratings/index.html.erb
@@ -20,7 +20,7 @@
         <td><%= movie_rating.date_watched %></td>
         <td><%= movie_rating.user_rating %></td>
         <td id="td1"><%= movie_rating.review %></td>
-        <td><%= movie_rating.user %></td>
+        <td><%= movie_rating.profile_id %></td>
         <td><%= movie_rating.movie %></td>
         <td><%= link_to 'Show', movie_rating %></td>
         <td><%= link_to 'Edit', edit_movie_rating_path(movie_rating) %></td>
