--- a/mov_rec/app/views/pages/home.html.erb
+++ b/mov_rec/app/views/pages/home.html.erb
@@ -2,3 +2,41 @@
 <p>
   
 </p>
+
+<h2>Feature Actor!</h2>
+
+<% @factor = MovieCast.
+					select("actor_id, count(actor_id) as count").
+					group("actor_id").
+					order('count DESC').
+					take %>
+
+<% @featuredactor = Actor.where(id: @factor.actor_id).take %>
+
+<div>
+<% unless @featuredactor.picture.blank? %>
+  <img src="<%= @featuredactor.picture %>" style="width: 200px; float: left; padding: 5px">
+<% end %>
+
+<div style="padding: 5px">
+
+<p>
+  <h3><a href="/actors/<%= @featuredactor.id %>"><%= @featuredactor.first_name %> <%= @featuredactor.last_name %></a></h3>
+</p>
+
+<p>
+  <strong>Date of birth:</strong>
+  <%= @featuredactor.date_of_birth %>
+</p>
+
+<p>
+  <strong>Place of birth:</strong>
+  <%= @featuredactor.place_of_birth %>
+</p>
+
+<p>
+  <strong>Gender:</strong>
+  <%= @featuredactor.gender %>
+</p>
+
+<h2>Couple Actors!</h2>
