--- a/mov_rec/app/views/movie_ratings/show.html.erb
+++ b/mov_rec/app/views/movie_ratings/show.html.erb
@@ -22,7 +22,7 @@
 
 <p>
   <strong>Movie:</strong>
-  <%= @movie_rating.movie %>
+  <%= @movie_rating.movie.movie_name %>
 </p>
 
 <%= link_to 'Edit', edit_movie_rating_path(@movie_rating) %> |
