Oops add to previous commit: this file displays checkboxes!

--- a/mov_rec/app/views/movies/_form.html.erb
+++ b/mov_rec/app/views/movies/_form.html.erb
@@ -53,6 +53,14 @@
     <%= f.label :age_rating %><br>
     <%= f.select :age_rating, ['G', 'PG', 'PG-13', 'R', 'NC-17'], include_blank: true %>
   </div>
+
+  <div class="field">
+    <% Topic.all.each do |topic| %>
+      <%= check_box_tag "movie[topic_ids][]", topic.id %>
+      <%= topic.genre_name %><br>
+      <% end %>
+  </div>
+
   <div class="actions">
     <%= f.submit %>
   </div>
