--- a/mov_rec/app/views/movie_ratings/_form.html.erb
+++ b/mov_rec/app/views/movie_ratings/_form.html.erb
@@ -51,15 +51,13 @@
     <%= f.label :review %><br>
     <%= f.text_area :review %>
   </div>
-  <div class="field">
-    <%= f.label :user_id %><br>
-    <%= f.text_field :user_id %>
-  </div>
+
   <div class="field">
     <%= f.label :movie_id %><br>
-    <%= f.text_field :movie_id %>
+    <%= f.collection_select :movie_id, Movie.order(:movie_name),:id,:movie_name, include_blank: true %>
   </div>
   <div class="actions">
+    <%= f.hidden_field :profile_id, value: current_user.profile.id %>
     <%= f.submit %>
   </div>
 <% end %>
