minor change to displayed text

--- a/mov_rec/app/views/users/show.html.erb
+++ b/mov_rec/app/views/users/show.html.erb
@@ -140,7 +140,8 @@
         <td><%= link_to 'Destroy', watch, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
-    <%= link_to 'New Watched Movie', new_movie_rating_path %>
+    <%= link_to 'New Movie Rating', new_movie_rating_path %>
+    <br><br>
   </tbody>
 </table>
 
