--- a/mov_rec/app/views/movies/index.html.erb
+++ b/mov_rec/app/views/movies/index.html.erb
@@ -4,14 +4,15 @@
 
 <h1>Listing Movies</h1>
 
-    <% @movies.each do |movie| %>
+<body>
 
-<div style="float:left; width:235px">
+    <% @movies.each do |movie| %>
 
     <% if current_user.user_type_id == @admin.id  %>
       <%= link_to 'Edit', edit_movie_path(movie) %>
       <%= link_to 'Destroy', movie, method: :delete, data: { confirm: 'Are you sure?' } %>
     <% end %>
+    <br />
         <% if movie.poster.blank? %>
           <img src="<%= movie.poster %>" style="width: 200px; visibility: hidden">
         <% else %>
@@ -19,8 +20,7 @@
         <% end %>
         <td style="width: 200px"><a href="/movies/<%= movie.id %>"><%= movie.movie_name %></a>
     <% end %>
-
-  </div>
+</body>
 
 <br>
 
