--- a/mov_rec/app/views/movies/show.html.erb
+++ b/mov_rec/app/views/movies/show.html.erb
@@ -160,4 +160,5 @@
       </tr>
     <% end %>
   </tbody>
+  <%= link_to 'New Movie Rating', new_movie_rating_path(:movie_id => @movie.id) %>
 </table>
