changed user_id to profile_id in movie_ratings

--- a/mov_rec/app/views/movie_ratings/edit.html.erb
+++ b/mov_rec/app/views/movie_ratings/edit.html.erb
@@ -2,4 +2,4 @@
 
 <%= render 'form' %>
 
-<a href="/users/<%= @movie_rating.user_id %>">Back</a>
+<a href="/users/<%= @movie_rating.profile_id %>">Back</a>
