--- a/mov_rec/app/views/movies/index.html.erb
+++ b/mov_rec/app/views/movies/index.html.erb
@@ -4,26 +4,18 @@
 
 <h1>Listing Movies</h1>
 
-<body>
-
-    <% @movies.each do |movie| %>
-
-    <% if current_user.user_type_id == @admin.id  %>
-      <%= link_to 'Edit', edit_movie_path(movie) %>
-      <%= link_to 'Destroy', movie, method: :delete, data: { confirm: 'Are you sure?' } %>
-    <% end %>
-    <br />
-        <% if movie.poster.blank? %>
-          <img src="<%= movie.poster %>" style="width: 200px; visibility: hidden">
-        <% else %>
-          <img src="<%= movie.poster %>" style="width: 200px">
-        <% end %>
-        <td style="width: 200px"><a href="/movies/<%= movie.id %>"><%= movie.movie_name %></a>
-    <% end %>
-</body>
-
-<br>
-
 <% if current_user.user_type_id == @admin.id  %>
-  <%= link_to 'New Movie', new_movie_path %>
+<%= link_to 'New Movie', new_movie_path %>
+<% end %>
+<br />
+
+<% @movies.each do |movie| %>
+
+<% if movie.poster.blank? %>
+  <a href="/movies/<%= movie.id %>" style="width:200px; padding:10px"><%= movie.movie_name %></a>
+<% else %>
+  <a href="/movies/<%= movie.id %>">
+    <img src="<%= movie.poster %>" style="width: 200px; padding:10px">
+  </a>
+<% end %>
 <% end %>
