--- a/mov_rec/app/views/actors/_form.html.erb
+++ b/mov_rec/app/views/actors/_form.html.erb
@@ -33,6 +33,10 @@
     <%= f.radio_button :gender, 'M' %>
     <%= label :gender_M, "Male" %>
   </div>
+  <div class="field">
+    <%= f.label :picture %><br>
+    <%= f.text_area :picture %>
+  </div>
   <div class="actions">
     <%= f.submit %>
   </div>
