--- a/mov_rec/app/views/actors/index.html.erb
+++ b/mov_rec/app/views/actors/index.html.erb
@@ -2,44 +2,32 @@
 
 <% @admin = UserType.find_by type_name: 'Admin' %>
 
+<body style="text-align:center">
+
 <h1>Listing Actors</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th></th>
-      <th>Name</th>
-      <th>Date of birth</th>
-      <th>Place of birth</th>
-      <th>Gender</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @actors.each do |actor| %>
-      <tr>
-        <% if actor.picture.blank? %>
-          <td><img src="<%= actor.picture %>" style="width: 75px; visibility: hidden"></td>
-        <% else %>
-          <td><img src="<%= actor.picture %>" style="width: 75px"></td>
-        <% end %>
-        <td><a href="/actors/<%= actor.id %>"><%= actor.first_name %> <%= actor.last_name %></a></td>
-        <td><%= actor.date_of_birth %></td>
-        <td><%= actor.place_of_birth %></td>
-        <td><%= actor.gender %></td>
-
-        <% if current_user.user_type_id == @admin.id  %>
-          <td><%= link_to 'Edit', edit_actor_path(actor) %></td>
-          <td><%= link_to 'Destroy', actor, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-        <% end %>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
 
 <% if current_user.user_type_id == @admin.id  %>
   <%= link_to 'New Actor', new_actor_path %>
 <% end %>
+<br>
+
+    <% @actors.each do |actor| %>
+
+        <% if actor.picture.blank? %>
+        <div style="padding:10px; text-align: center; display: inline-block">
+          <a href="/actors/<%= actor.id %>>">
+            <img src="https://images-na.ssl-images-amazon.com/images/G/01/IMDbPro/images/default_name._V142442227_SY215_CR34,0,146,215_.png" style="width: 200px">
+          </a>
+          <p style="padding: 0px"><a href="/actors/<%= actor.id %>"><%= actor.first_name %> <%= actor.last_name %></a></p>
+        </div>
+        <% else %>
+        <div style="display: inline-block">
+           <a href="/actors/<%= actor.id %>">
+             <img src="<%= actor.picture %>" style="width: 200px; padding:10px; padding-bottom: 0px">
+           </a>
+           <p style="padding: 0px"><a href="/actors/<%= actor.id %>"><%= actor.first_name %> <%= actor.last_name %></a></p>
+        </div>
+        <% end %>
+    <% end %>
+
+</body>
