--- a/mov_rec/app/views/actors/show.html.erb
+++ b/mov_rec/app/views/actors/show.html.erb
@@ -1,9 +1,19 @@
 <p id="notice"><%= notice %></p>
 
-<div>
-<% unless @actor.picture.blank? %>
-  <img src="<%= @actor.picture %>" style="width: 200px; float: left; padding: 5px">
+<p>
+<br />
+<% if current_user.user_type_id == UserType.find_by(type_name: 'Admin').id  %>
+  <%= link_to 'Edit', edit_actor_path(@actor) %> |
+  <%= link_to 'Destroy', @actor, method: :delete, data: { confirm: 'Are you sure?' } %>
 <% end %>
+
+</p>
+<div>
+  <% if @actor.picture.blank? %>
+      <img src="https://images-na.ssl-images-amazon.com/images/G/01/IMDbPro/images/default_name._V142442227_SY215_CR34,0,146,215_.png" style="width: 200px; float:left; padding: 5px">
+  <% else %>
+       <img src="<%= @actor.picture %>" style="width: 200px; float:left; padding: 5px">
+  <% end %>
 
 <div style="padding: 5px">
 
@@ -34,12 +44,6 @@
 
 </div>
 </div>
-
-<% if current_user.user_type_id == UserType.find_by(type_name: 'Admin').id  %>
-  <%= link_to 'Edit', edit_actor_path(@actor) %> |
-<% end %>
-
-<%= link_to 'Back', actors_path %>
 
 <% @movies = Movie.joins(:movie_casts).where(movie_casts: { actor_id: @actor.id }).order('movie_name ASC') %>
 
