--- a/mov_rec/app/views/directors/index.html.erb
+++ b/mov_rec/app/views/directors/index.html.erb
@@ -2,42 +2,32 @@
 
 <% @admin = UserType.find_by type_name: 'Admin' %>
 
+<body style="text-align: center">
+
 <h1>Listing Directors</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th></th>
-      <th>Name</th>
-      <th>Place of birth</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @directors.each do |director| %>
-      <tr>
-         <% if director.picture.blank? %>
-          <td><img src="<%= director.picture %>" style="width: 75px; visibility: hidden"></td>
-        <% else %>
-          <td><img src="<%= director.picture %>" style="width: 75px"></td>
-        <% end %>
-        <td><a href="/directors/<%= director.id %>"><%= director.first_name %> <%= director.last_name %></a></td>
-        <td><%= director.place_of_birth %></td>
-        <td><%= director.date_of_birth %></td>
-        <td><%= director.gender %></td>
-
-        <% if current_user.user_type_id == @admin.id %>
-          <td><%= link_to 'Edit', edit_director_path(director) %></td>
-          <td><%= link_to 'Destroy', director, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-        <% end %>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
 
 <% if current_user.user_type_id == @admin.id  %>
   <%= link_to 'New Director', new_director_path %>
 <% end %>
+<br>
+
+    <% @directors.each do |director| %>
+
+         <% if director.picture.blank? %>
+         <div style="padding:10px; text-align: center; display: inline-block">
+           <a href="/directors/<%= director.id %>>">
+             <img src="https://images-na.ssl-images-amazon.com/images/G/01/IMDbPro/images/default_name._V142442227_SY215_CR34,0,146,215_.png" style="width: 200px">
+           </a>
+           <p style="padding: 0px"><a href="/directors/<%= director.id %>"><%= director.first_name %> <%= director.last_name %></a></p>
+         </div>
+        <% else %>
+        <div style="display: inline-block">
+           <a href="/directors/<%= director.id %>">
+             <img src="<%= director.picture %>" style="width: 200px; padding:10px; padding-bottom: 0px">
+           </a>
+           <p style="padding: 0px"><a href="/directors/<%= director.id %>"><%= director.first_name %> <%= director.last_name %></a></p>
+        </div>
+        <% end %>
+    <% end %>
+
+</body>
