--- a/mov_rec/app/views/movies/show.html.erb
+++ b/mov_rec/app/views/movies/show.html.erb
@@ -1,16 +1,22 @@
 <p id="notice"><%= notice %></p>
 
-<h2><%= @movie.movie_name %></h2>
-
+<br>
 <% if current_user.user_type_id == UserType.find_by(type_name: 'Admin').id  %>
   <%= link_to 'Edit', edit_movie_path(@movie) %> |
   <%= link_to 'Destroy', @movie, method: :delete, data: { confirm: 'Are you sure?' } %>
 <% end %>
 
+<h2><%= @movie.movie_name %></h2>
 
+
+<br>
 <% unless @movie.poster.blank? %>
   <img src="<%= @movie.poster %>" style="width: 350px; float: right">
 <% end %>
+
+
+<iframe width="560" height="315" src="//youtube.com/embed/<%= @movie.trailer %>" frameborder="0" allowfullscreen></iframe>
+
 
 <p>
   <div><strong>Description:</strong></div>
